# projectNyar

src/accel_logic_client/: CMakeLists.txt  package.xml  vector_logic_client.cpp
src/accel_logic_client/launch/: nyar_launch.launch.py
src/accel_logic_client/src/: vector_logic_client.cpp
src/i2c_edge_server/: CMakeLists.txt  i2c_server.cpp  package.xml
src/i2c_edge_server/config/: sensor_config.yaml
src/i2c_edge_server/src/: i2c_server.cpp
src/sensor_interfaces/: CMakeLists.txt  package.xml
src/sensor_interfaces/srv/: I2cCommand.srv
